working on login page cannot redirect to login page after clicking logout

--- a/src/screens/login/login.scss
+++ b/src/screens/login/login.scss
@@ -70,7 +70,7 @@ form {
   display: flex;
   flex-direction: column;
 }
-form h2 {
+h2 {
   font-family: Rubik-ExtraBold, sans-serif;
   text-align: center;
   font-weight: bold;
